@@ -334,6 +334,7 @@ Erhard Puetz <erhard-puetz@wtal.de>
 
 Matthias Reichl  <hias@horus.com>
     - POKEY ALLPOT register fix
+    - The!Cart emulation fixes
 
 Thomas Richter <thor@math.tu-berlin.de>
     - GTIA collisions and third colour of players
